deploy/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: s3-balance
  labels:
    app: s3-balance
    tier: backend
